--- a/src/components/Splash/Splash.css
+++ b/src/components/Splash/Splash.css
@@ -6,7 +6,7 @@
 }
 
 .Square {
-    margin-top: 200px;
+    margin-top: 50px;
     margin-bottom: 200px;
     height: 400px;
     width: 200px;
@@ -29,34 +29,37 @@
     overflow: hidden; 
     white-space: nowrap;
     margin-top: -10px;
-    display: flex; 
-    flex-direction: row ;
-    align-items: center;
+    display: flex;
+	
 }
 
 .WU {
     color: White ; 
+    margin-right: 7px;
 }
 
 .line {
-    background-color: black ;
-    border: 3px solid black;
+    background: black;
+    border: 1px solid black;
     width: 510px;
     margin-left: 500px;
     margin-top: -20px;
 }
 
-.verticalLine {
-    background-color: black ;
-    border: 2px solid black;
-    width: 2px;
-    height: 600px;
-    margin-top: -500px;
-    margin-left: 110px;
-
-}
-
 .photo {
     margin-top: -900px;
     margin-right: 100px;
+}
+
+.splashPhoto {
+    display: flex;
+	flex-direction: row;
+	flex-wrap: wrap;
+	justify-content: center;
+	align-items: center;
+	align-content: center;
+    margin-left: 850px;
+    width: 600px;
+    margin-top: 20px;
+
 }
